# pyCycle_edu

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  MEMORY.md  README.md  pyproject.toml
.github/: pull_request_template.md
Reference_answers/: README.md
Reference_answers/pycycle_ui_ux_reference/: README.md
Reference_answers/pycycle_ui_ux_reference/prompts/: stage_01_ui_template.md  stage_02_uv_pyside6_setup.md  (+1 more)
Reference_sources/: README.md  source_manifest.md
docs/dev-log/: 2026-05-11-initial-governance.md  2026-05-11-pycycle-ai-prompting-ppt.md  2026-05-11-pyside6-ui-ux.md  2026-05-11-readme-ppt-visual-check.md  2026-05-11-real-pycycle-reference-app.md  2026-05-11-ribbon-engineering-ui.md  2026-05-12-simple-turbojet-gui.md  2026-05-13-main-push-preference.md  2026-05-13-readme-om-pycycle-install.md  2026-05-13-readme-tooling-prereqs.md  README.md  TEMPLATE.md
docs/research/: 2026-05-11-ai-prompting-pycycle-ui.md  2026-05-11-pyside6-ui-ux.md  2026-05-12-simple-turbojet-tutorial.md
docs/sessions/: 2026-05-11-ai-prompting-ppt-session.md  2026-05-11-pyside6-ui-ux-session.md  2026-05-11-readme-ppt-visual-check-session.md  2026-05-12-simple-turbojet-gui-release-session.md  2026-05-13-readme-bilingual-tooling-session.md
docs/slides/: build_pycycle_ai_prompting_ppt.py  export-pptx-preview.ps1  pycycle_ai_prompting_course.pptx  pycycle_ai_prompting_course_林上智修改.pptx
scripts/: verify-upstream-submodule.ps1
src/pycycle_edu_ui/: __init__.py  main.py  models.py  paths.py  reference_data.py  reports.py  simple_turbojet_report.py  theme.py  widgets.py
tests/: test_simple_turbojet_report.py
tutorials/simple_turbojet/: README.md  reference.html  simple_turbojet.py
(+10 files in other folders)
