[project]
name = "pycycle-edu"
version = "0.1.0"
description = "Traditional Chinese education wrapper for pyCycle with a PySide6 UI/UX workbench."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "PySide6>=6.7",
    "PySide6-Fluent-Widgets>=1.7",
    "pyqtgraph>=0.13",
]

[project.scripts]
pycycle-edu-ui = "pycycle_edu_ui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycycle_edu_ui"]
