[project]
name = "pycycle-gui"
version = "0.2.0"
description = "pyCycle computational workspace with reset GUI layer."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=1.26,<2",
    "openmdao>=3.40,<3.41",
    "reportlab>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycycle_edu_ui"]
